--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -176,7 +176,7 @@ body {
 .common-width:after {
   clear: both;
 }
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 1199px) {
   .common-width {
     width: 100%;
   }
@@ -192,7 +192,6 @@ body {
 }
 .g-hd .hd .about {
   float: left;
-  margin-left: -5px;
 }
 .g-hd .hd .about span {
   padding: 0 5px;
@@ -201,14 +200,17 @@ body {
   border-left: 1px solid #eaeaea;
   border-right: 1px solid #eaeaea;
 }
+.g-hd .hd .about span:nth-of-type(1) {
+  padding-left: 0;
+}
 .g-hd .hd .store {
   float: right;
-  margin-right: -5px;
 }
 .g-hd .hd .store span {
   padding: 0 5px;
 }
 .g-hd .hd .store span:nth-last-of-type(1) {
+  padding-right: 0;
   border-left: 1px solid #eaeaea;
 }
 .g-hd .hd .about span a,
@@ -277,7 +279,6 @@ body {
 }
 .g-hd .nav .menu-box {
   float: right;
-  margin-right: -15px;
 }
 .g-hd .nav .menu-box .menu-list .menu-item {
   display: inline-block;
@@ -292,6 +293,9 @@ body {
   -ms-transform: scaleX(1);
   -o-transform: scaleX(1);
   transform: scaleX(1);
+}
+.g-hd .nav .menu-box .menu-list .menu-item:nth-last-of-type(1) {
+  padding-right: 0;
 }
 .g-hd .nav .menu-box .menu-list .menu-item .item-link {
   display: block;
@@ -390,6 +394,28 @@ body {
 }
 .g-hd .nav .menu-box .all-category .category-item {
   line-height: 50px;
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .g-hd .hd {
+    padding: 0 10px;
+  }
+  .g-hd .nav {
+    padding: 0 10px;
+  }
+  .g-hd .nav .menu-box .menu-list .menu-item {
+    padding: 20px 5px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .g-hd .hd {
+    padding: 0 15px;
+  }
+  .g-hd .nav {
+    padding: 0 15px;
+  }
+  .g-hd .nav .menu-box .menu-list .menu-item {
+    padding: 20px 10px;
+  }
 }
 .g-foot {
   margin-top: 100px;
@@ -555,6 +581,96 @@ body {
   color: #888;
   font-size: 14px;
   line-height: 30px;
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .g-foot .about {
+    padding: 40px 10px;
+    background: #f5f5f5;
+  }
+  .g-foot .aboutbefore,
+  .g-foot .about:after {
+    content: " ";
+    display: table;
+    zoom: 1;
+  }
+  .g-foot .about:after {
+    clear: both;
+  }
+  .g-foot .about .contact {
+    width: 50%;
+  }
+  .g-foot .about .contact .des {
+    float: none;
+  }
+  .g-foot .about .contact form {
+    display: block;
+    margin: 10px 0 10px 0;
+  }
+  .g-foot .about .contact formbefore,
+  .g-foot .about .contact form:after {
+    content: " ";
+    display: table;
+    zoom: 1;
+  }
+  .g-foot .about .contact form:after {
+    clear: both;
+  }
+  .g-foot .about .community {
+    width: 50%;
+  }
+  .g-foot .about .community .ico-box {
+    float: left;
+    margin-left: 20px;
+    margin-top: 26px;
+  }
+  .g-foot .foot {
+    padding: 100px 10px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .g-foot .about {
+    padding: 40px 15px;
+    background: #f5f5f5;
+  }
+  .g-foot .aboutbefore,
+  .g-foot .about:after {
+    content: " ";
+    display: table;
+    zoom: 1;
+  }
+  .g-foot .about:after {
+    clear: both;
+  }
+  .g-foot .about .contact {
+    width: 50%;
+  }
+  .g-foot .about .contact .des {
+    float: none;
+  }
+  .g-foot .about .contact form {
+    display: block;
+    margin: 10px 0 10px 0;
+  }
+  .g-foot .about .contact formbefore,
+  .g-foot .about .contact form:after {
+    content: " ";
+    display: table;
+    zoom: 1;
+  }
+  .g-foot .about .contact form:after {
+    clear: both;
+  }
+  .g-foot .about .community {
+    width: 50%;
+  }
+  .g-foot .about .community .ico-box {
+    float: left;
+    margin-left: 20px;
+    margin-top: 26px;
+  }
+  .g-foot .foot {
+    padding: 100px 15px;
+  }
 }
 .g-path {
   margin: 10px 0;
