--- a/public/static/frontend/desktop/css/public/components.css
+++ b/public/static/frontend/desktop/css/public/components.css
@@ -427,6 +427,21 @@ body {
   .g-hd .nav .menu-box .menu-list .menu-item {
     padding: 20px 5px;
   }
+  .g-hd .nav .item-children {
+    padding: 0 10px;
+  }
+  .g-hd .nav .item-children .children-list {
+    width: 33.333%;
+    padding: 50px 10px;
+  }
+  .g-hd .nav .item-children .children-list:nth-of-type(1),
+  .g-hd .nav .item-children .children-list:nth-of-type(2),
+  .g-hd .nav .item-children .children-list:nth-of-type(3) {
+    padding-bottom: 0;
+  }
+  .g-hd .nav .item-children .children-list a {
+    font-size: 12px;
+  }
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
   .g-hd .hd {
@@ -437,6 +452,12 @@ body {
   }
   .g-hd .nav .menu-box .menu-list .menu-item {
     padding: 20px 10px;
+  }
+  .g-hd .nav .item-children {
+    padding: 0 15px;
+  }
+  .g-hd .nav .item-children .children-list a {
+    font-size: 12px;
   }
 }
 .g-foot {
