--- a/app/admin/view/media/image/create_folder.html
+++ b/app/admin/view/media/image/create_folder.html
@@ -8,8 +8,7 @@
                     目录名
                 </label>
                 <div class="layui-input-inline">
-                    <input type="text" id="folder" name="folder"
-                           autocomplete="off" class="layui-input">
+                    <input type="text" id="folder" name="folder" autocomplete="off" class="layui-input">
 
                 </div>
                 <br>
@@ -49,17 +48,17 @@
             form.on('submit(add)',
                 function (data) {
                     $.ajax({
-                        url: "{:url('media/image/create_folder')}",
+                        url: "{:url('media_create_folder')}",
                         type: 'POST',
                         data: data.field,
                         'success': function (result) {
                             if (result.status === 1) {
-                                layer.msg(result.message, {'icon': 1, 'time': 1000}, function () {
+                                layer.msg(result.message, { 'icon': 1, 'time': 1000 }, function () {
                                     xadmin.close();
                                     xadmin.father_reload();
                                 });
                             } else {
-                                layer.msg(result.message, {'icon': 5, 'time': 8000});
+                                layer.msg(result.message, { 'icon': 5, 'time': 8000 });
                             }
                         }
                     }, 'JSON');
